----------------------------------------------------------------------------

1)  The OPTIMIZE bit 4 feature added in 4.5.1 is now extended to all
    tables.

    Additionally, if a builtin chain has a single rule that branches to
    another chain, then the rules from the target chain are moved to
    the builtin chain and the target chain is omitted.

2)  Shorewall now throws an error if:

    a) There are tracked providers; and
    b) PROVIDER_OFFSET is 0; and
    c) 'ipp2p' is used as the PROTO in a tcpri entry.

----------------------------------------------------------------------------
                N E W   F E A T U R E S   I N   4 . 5
----------------------------------------------------------------------------

1)  The shorewall.conf options WIDE_TC_MARKS and HIGH_ROUTE_MARKS are
    now deprecated in favor of a new set of options that define the layout
    of the 32-bit packet/connection mark.

        TC_BITS           Number of bits at the least-significant end
       			  of the mark used for traffic shaping. Marks
       			  used for traffic shaping must have a value
       			  between 1 and 2**TC_BITS - 1.

        PROVIDER_OFFSET   The offset in bits from the least-significant
			  end of the mark where the provider mark field
       			  begins. If zero, the provider mark occupies
       			  the same area as the traffic shaping
       			  mark. Otherwise, the value specified must
       			  be greater than or equal to MASK_BITS
       			  (below). Shorewall will automatically adjust
       			  a non-zero PROVIDER_OFFSET to meet this
       			  requirement.

	PROVIDER_BITS	  Number of bits reserved for routing
			  marks. Provider marks must have a value
			  between 2**PROVIDER_OFFSET and
			  2**(PROVIDER_OFFSET + PROVIDER_BITS) - 1.

	MASK_BITS	  Number of 1 bits in the default mask when
			  specifying a test on the packet or connection
			  mark. These tests appear in the TEST column
			  of shorewall-tcrules (5) and in the MARK