@@ -1404,88 +1404,98 @@ sub optimize_ruleset() {
 	    $passes++;
 
 	    for my $chainref ( values %{$chain_table{$table}} ) {
-		if ( $chainref->{referenced} && ! $chainref->{dont_optimize} ) {
+		if ( $chainref->{referenced} ) {
 		    #
-		    # First count the rules -- we must do that because 
-		    #                          we delete rules by setting them
-		    #                          to nil.
-		    my $numrules = 0;
-		    my $firstrule;
-
-		    for ( @{$chainref->{rules}} ) {
-			if ( defined ) {
-			    $numrules++;
-			    $firstrule = $_ unless defined $firstrule;
-			}
+		    # If the chain isn't branched to, then delete it
+		    #
+		    unless ( $chainref->{builtin} || keys %{$chainref->{references}} ) {
+			$chainref->{referenced} = 0;
+			next;
 		    }
 		    
-		    if ( $numrules == 0 ) {
+		    unless ( $chainref->{dont_optimize} ) {
 			#
-			# No rules in this chain
-			#
-			if ( $chainref->{builtin} ) {
-			    #
-			    # Built-in -- mark it 'dont_optimize' so we ignore it in follow-on passes
-			    #
-			    $chainref->{dont_optimize} = 1;
-			} else {
-			    #
-			    # Not a built-in -- we can delete it and it's references
-			    #
-			    delete_references $chainref;
-			    $progress = 1;
-			    $chains++;
-			}
-		    } elsif ( $numrules == 1 ) {
-			#
-			# Chain has a single non-nil rule which is in $firstrule
-			#
-			if ( $firstrule =~ /^-A $chainref->{name} -[jg] (.*)$/ ) {
-			    #
-			    # Easy case -- the rule is a simple jump
-			    #
-			    if ( $chainref->{builtin} ) {
-				#
-				# A built-in chain. If the target is a user chain,
-				# we can move its rules to the built-in
-				#
-				if ( conditionally_move_rules $chainref, $1 ) {
-				    #
-				    # Target was a user chain -- rules moved
-				    #
-				    $progress = 1;
-				    $chains++;
-				} else {
-				    #
-				    # Target was a built-in. Ignore this chain in follow-on passes
-				    #
-				    $chainref->{dont_optimize} = 1;
-				}
-			    } else {
-				#
-				# Replace all references to this chain with references to the target
-				#
-				replace_references $chainref, $1;
-				$progress = 1;
-				$chains++;
+			# Next count the rules -- we must do that because 
+			#                          we delete rules by setting them
+			#                          to nil.
+			my $numrules = 0;
+			my $firstrule;
+			
+			for ( @{$chainref->{rules}} ) {
+			    if ( defined ) {
+				$numrules++;
+				$firstrule = $_ unless defined $firstrule;
 			    }
-			} elsif ( $firstrule =~ /-A $chainref->{name}( .*) -[jg] (.*)$/ ) {
+			}
+			
+			if ( $numrules == 0 ) {
 			    #
-			    # Not so easy -- the rule contains matches
+			    # No rules in this chain
 			    #
 			    if ( $chainref->{builtin} ) {
 				#
-				# This case requires a new rule merging algorithm. Ignore this chain for
-				# now.
+				# Built-in -- mark it 'dont_optimize' so we ignore it in follow-on passes
 				#
 				$chainref->{dont_optimize} = 1;
 			    } else {
 				#
-				# Replace references to this chain with the target and add the predicates
+				# Not a built-in -- we can delete it and it's references
 				#
-				replace_references1 $chainref, $2, $1;
+				delete_references $chainref;
 				$progress = 1;
 				$chains++;
+			    }
+			} elsif ( $numrules == 1 ) {
+			    #
+			    # Chain has a single non-nil rule which is in $firstrule
+			    #
+			    if ( $firstrule =~ /^-A $chainref->{name} -[jg] (.*)$/ ) {
+				#
+				# Easy case -- the rule is a simple jump
+				#
+				if ( $chainref->{builtin} ) {
+				    #
+				    # A built-in chain. If the target is a user chain,
+				    # we can move its rules to the built-in
+				    #
+				    if ( conditionally_move_rules $chainref, $1 ) {
+					#
+					# Target was a user chain -- rules moved
+					#
+					$progress = 1;
+					$chains++;
+				    } else {
+					#
+					# Target was a built-in. Ignore this chain in follow-on passes
+					#
+					$chainref->{dont_optimize} = 1;
+				    }
+				} else {
+				    #
+				    # Replace all references to this chain with references to the target
+				    #
+				    replace_references $chainref, $1;
+				    $progress = 1;
+				    $chains++;
+				}
+			    } elsif ( $firstrule =~ /-A $chainref->{name}( .*) -[jg] (.*)$/ ) {
+				#
+				# Not so easy -- the rule contains matches
+				#
+				if ( $chainref->{builtin} ) {
+				    #
+				    # This case requires a new rule merging algorithm. Ignore this chain for
+				    # now.
+				    #
+				    $chainref->{dont_optimize} = 1;
+				} else {
+				    #
+				    # Replace references to this chain with the target and add the predicates
+				    #
+				    replace_references1 $chainref, $2, $1;
+				    $progress = 1;
+				    $chains++;
+				}
 			    }
 			}
 		    }
@@ -3049,7 +3059,12 @@ sub expand_rule( $$$$$$$$$$;$ )
 	#
 	fatal_error "Exclusion is not possible in ACCEPT+/CONTINUE/NONAT rules" if $disposition eq 'RETURN';
 
+	#
+	# Create the Exclusion Chain
+	#
 	my $echain = newexclusionchain;
+
+	my $echainref = new_chain $chainref->{table}, $echain;
 
 	#
 	# Use the current rule and send all possible matches to the exclusion chain
@@ -3061,15 +3076,10 @@ sub expand_rule( $$$$$$$$$$;$ )
 		    #
 		    # We evaluate the source net match in the inner loop to accomodate systems without $capabilities{KLUDGEFREE}
 		    #
-		    add_rule( $chainref, join( '', $rule, match_source_net( $inet, $restriction ), match_dest_net( $dnet ), $onet, "-j $echain" ), 1 );
+		    add_jump( $chainref, $echainref, 0, join( '', $rule, match_source_net( $inet, $restriction ), match_dest_net( $dnet ), $onet ), 1 );
 		}
 	    }
 	}
-
-	#
-	# Create the Exclusion Chain
-	#
-	my $echainref = new_chain $chainref->{table}, $echain;
 
 	#
 	# Generate RETURNs for each exclusion
