@@ -52,6 +52,8 @@ None.
     another chain, then the rules from the target chain are moved to
     the builtin chain and the target chain is omitted.
 
+    Finally, chains with no references are deleted.
+
 2)  Shorewall now throws an error if:
 
     a) There are tracked providers; and
